--- a/.github/workflows/test-runner.yaml
+++ b/.github/workflows/test-runner.yaml
@@ -1,5 +1,8 @@
 name: Doit s'executer dans un custom runner
-on: push
+on: 
+  schedule: [{cron: "0 0 * * *"}]
+  workflow_dispatch:
+  push: {branches: ["master", "main"]}
 
 jobs:
   init:
