--- a/.github/workflows/test-runner.yaml
+++ b/.github/workflows/test-runner.yaml
@@ -17,7 +17,7 @@ jobs:
       - name: set up java
         uses: actions/setup-java@v4
         with: 
-          distrubution: "microsoft"
+          distribution: "microsoft"
           java-version: "21"
           cache: 'gradle'
           cache-dependency-path: | # optional
