--- a/.github/workflows/test-runner.yaml
+++ b/.github/workflows/test-runner.yaml
@@ -22,6 +22,7 @@ jobs:
       - name: create zip bundle
         run: |
           pwd
+          cd /home/runner/work/github-custom-runner/github-custom-runner
           zip -r ${{github.sha}}.zip
       - name: archieve artifact
         uses: actions/upload-artifact@v4
