--- a/.github/workflows/test-runner.yaml
+++ b/.github/workflows/test-runner.yaml
@@ -28,7 +28,8 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: my-artifact
-          path: ${{github.sha}}.zip
+          path: ../${{github.sha}}.zip
+          overwrite: true
           
       
   
