--- a/.github/workflows/test-runner.yaml
+++ b/.github/workflows/test-runner.yaml
@@ -28,7 +28,7 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: my-artifact
-          path: ../${{github.sha}}.zip
+          path: /home/runner/work/github-custom-runner/github-custom-runner
           overwrite: true
           
       
