--- a/.github/workflows/test-runner.yaml
+++ b/.github/workflows/test-runner.yaml
@@ -12,7 +12,7 @@ env:
 
 jobs:
   init:
-    runs-on: ubuntu-latest
+    runs-on: self-hosted
     steps:
       - name: checkout the code
         uses: actions/checkout@v2
