--- a/.github/workflows/test-runner.yaml
+++ b/.github/workflows/test-runner.yaml
@@ -8,7 +8,7 @@ on:
       - master
       - main
 env:
-  ZIP_PATH: /home/runner/work/github-custom-runner/github-custom-runner
+  ZIP_PATH: ${{ github.workspace }}
 
 jobs:
   init:
@@ -33,7 +33,7 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: my-artifact
-          path: /home/runner/work/github-custom-runner/github-custom-runner
+          path: env.ZIP_PATH
           overwrite: true
           
       
