--- a/.github/workflows/test-runner.yaml
+++ b/.github/workflows/test-runner.yaml
@@ -34,7 +34,10 @@ jobs:
           if ($env:RUNNER_OS -eq "Windows") {
             Compress-Archive -Path ${{ env.ZIP_PATH }} -DestinationPath ${{ env.ZIP_PATH }}/${{github.sha}}.zip
           }
-          else zip -r ../${{github.sha}}.zip 
+          else {
+            echo ${{ github.sha }}
+            zip -r ../${{ github.sha }}.zip 
+          }
           
       - name: archieve artifact
         uses: actions/upload-artifact@v4
